welcome.lessons.welcome.bat.bool2.AlarmClock.scala.error
alarmClock:2: error: ')' expected but 'return' found.
if ((1 || 2 || 3 || 4 || 5 && !vacation) return 7:00
                                         ^alarmClock:2: error: identifier expected but integer literal found.
if ((1 || 2 || 3 || 4 || 5 && !vacation) return 7:00
                                                  ^