welcome.lessons.welcome.bat.bool2.AlarmClock.scala.code
def alarmClock(day:Int, vacation:Boolean): String = {
if ((1 || 2 || 3 || 4 || 5 && !vacation) return 7:00
if (((6 || 0) && !vacation) || ((1||2||3||4||5) && vacation)) return 10:00
if ((1||2||3||4||5 && vacation) return off
}